try to draw something to the html canvas

--- a/render/layout.html
+++ b/render/layout.html
@@ -4,7 +4,7 @@
         <!-- head definitions go here -->
     </head>
     <body>
-        <div>Hello Shmorld</div>
+        <div>Hello World</div>
         <canvas id="myCanvas">
             
         </canvas>
