show the active node on js

--- a/render/layout.html
+++ b/render/layout.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <div>Hello World</div>
+        <div id="path"></div>
         <canvas id="myCanvas">
             
         </canvas>
