--- a/render/layout.html
+++ b/render/layout.html
@@ -6,7 +6,7 @@
     <body>
         <div>Hello World</div>
         <div id="path"></div>
-        <canvas id="myCanvas">
+        <canvas width="2000" id="myCanvas">
             
         </canvas>
         <script src="render.js"></script>
