--- a/render/layout.html
+++ b/render/layout.html
@@ -4,7 +4,10 @@
         <!-- head definitions go here -->
     </head>
     <body>
-        <div>Hello World</div>
+        <div>
+            <input id="search_file"/>
+            <button onclick="onSearch()">Search</button>
+        </div>
         <div id="path"></div>
         <canvas width="2000" height="500" id="myCanvas">
             
