add variable name search to advanced search

--- a/render/layout.html
+++ b/render/layout.html
@@ -7,6 +7,8 @@
         <div>
             <input id="search_file"/>
             <button onclick="onSearch()">Search</button>
+            <input id="advanced_search"/>
+            <button onclick="onAdvancedSearch()">Adv Src</button>
         </div>
         <div id="path"></div>
         <canvas width="2000" height="500" id="myCanvas">
