--- a/render/layout.html
+++ b/render/layout.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <!-- head definitions go here -->
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div>
@@ -10,10 +11,10 @@
             <input id="advanced_search"/>
             <button onclick="onAdvancedSearch()">Adv Src</button>
         </div>
-        <div id="path"></div>
-        <canvas width="2000" height="500" id="myCanvas">
-            
-        </canvas>
+        <div class="canvas-controller">
+            <div id="path"></div>
+            <canvas width="1000" height="500" id="myCanvas"></canvas>
+        <div>
         <script src="render.js"></script>
     </body>
 </html>
